--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,6 @@ SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
+MESSAGE_DATABASE_HOST=127.0.0.1
+MESSAGE_DATABASE_PORT=9042
+MESSAGE_DATABASE_KEYSPACE=chat_app
